--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
 <div class="logo-grande"><img src="{{url_for('static', filename='img/logo_grande.jpg')}}" alt="ESIBot"></div>
 
 <div class="titulos" id="quienes-somos">
-	<h2>¿QUIÉNES SOMOS?</h2>
+	<a href="/quienes_somos"><h2>¿QUIÉNES SOMOS?</h2></a>
 	<h3>Es una larga historia...</h3>
 </div>
 <section class="wrapper">
@@ -44,7 +44,7 @@
 <!-- CURSOS -->
 
 <div class="titulos" id="cursos">
-	<h2>CURSOS</h2>
+	<a href="/cursos"><h2>CURSOS</h2></a>
 	<h3>¡Aprende con nosotros!</h3>
 </div>
 
@@ -87,7 +87,7 @@
 
 <!-- NOTICIAS -->
 <div class="titulos" id="noticias">
-	<h2>NOTICIAS</h2>
+	<a href = "/noticias" ><h2>NOTICIAS</h2></a>
 	<h3>¡Entérate de lo que está pasando!</h3>
 </div>
 
@@ -132,7 +132,7 @@
 
 <div class="gal">
 	<div class="titulos" id="galeria">
-		<h2>GALERÍA</h2>
+		<a href = "/#galeria"><h2>GALERÍA</h2></a>
 		<h3>Para más fotos, consulta nuestras RRSS</h3>
 	</div>
 	<div class="lightbox">
